build/log/idf_py_stdout_output_80255
Command: ninja all
[1/206] Linking C static library esp-idf/ts_log/libts_log.a
[2/206] Linking C static library esp-idf/ts_event/libts_event.a
[3/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_dbl.c.obj
[4/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_end.c.obj
[5/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/esp_console_repl_chip.c.obj
[6/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_dstr.c.obj
[7/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_cmd.c.obj
[8/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_file.c.obj
[9/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_hashtable.c.obj
[10/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_date.c.obj
[11/206] Building C object esp-idf/ts_config/CMakeFiles/__idf_ts_config.dir/src/ts_config_file.c.obj
FAILED: esp-idf/ts_config/CMakeFiles/__idf_ts_config.dir/src/ts_config_file.c.obj 
/Users/thomas/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -DTS_CONFIG_VERSION_MAJOR=0 -DTS_CONFIG_VERSION_MINOR=1 -DTS_CONFIG_VERSION_PATCH=0 -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/thomas/TianshanOS/build/config -I/Users/thomas/TianshanOS/components/ts_core/ts_config/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/newlib/platform_include -I/Users/thomas/esp/v5.5.1/esp-idf/components/freertos/config/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -I/Users/thomas/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/thomas/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/heap/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/heap/tlsf -I/Users/thomas/esp/v5.5.1/esp-idf/components/log/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/soc/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/soc/esp32s3 -I/Users/thomas/esp/v5.5.1/esp-idf/components/soc/esp32s3/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/soc/esp32s3/register -I/Users/thomas/esp/v5.5.1/esp-idf/components/hal/platform_port/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/hal/esp32s3/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/hal/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_rom/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3 -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_common/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_system/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_system/port/soc -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -I/Users/thomas/esp/v5.5.1/esp-idf/components/xtensa/esp32s3/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/xtensa/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_timer/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/include/apps -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/port/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/thomas/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/thomas/esp/v5.5.1/esp-idf/components/nvs_flash/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_partition/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/spiffs/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/fatfs/diskio -I/Users/thomas/esp/v5.5.1/esp-idf/components/fatfs/src -I/Users/thomas/esp/v5.5.1/esp-idf/components/fatfs/vfs -I/Users/thomas/esp/v5.5.1/esp-idf/components/wear_levelling/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/sdmmc/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_driver_sdmmc/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_driver_sdspi/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/esp_pm/include -I/Users/thomas/esp/v5.5.1/esp-idf/components/json/cJSON -I/Users/thomas/esp/v5.5.1/esp-idf/components/vfs/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/thomas/TianshanOS=. -fmacro-prefix-map=/Users/thomas/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ts_config/CMakeFiles/__idf_ts_config.dir/src/ts_config_file.c.obj -MF esp-idf/ts_config/CMakeFiles/__idf_ts_config.dir/src/ts_config_file.c.obj.d -o esp-idf/ts_config/CMakeFiles/__idf_ts_config.dir/src/ts_config_file.c.obj -c /Users/thomas/TianshanOS/components/ts_core/ts_config/src/ts_config_file.c
/Users/thomas/TianshanOS/components/ts_core/ts_config/src/ts_config_file.c: In function 'ts_config_file_load_all':
/Users/thomas/TianshanOS/components/ts_core/ts_config/src/ts_config_file.c:218:54: error: '%s' directive output may be truncated writing up to 255 bytes into a region of size between 128 and 255 [-Werror=format-truncation=]
  218 |             snprintf(filepath, sizeof(filepath), "%s/%s", s_config_path, entry->d_name);
      |                                                      ^~
/Users/thomas/TianshanOS/components/ts_core/ts_config/src/ts_config_file.c:218:13: note: 'snprintf' output between 2 and 384 bytes into a destination of size 256
  218 |             snprintf(filepath, sizeof(filepath), "%s/%s", s_config_path, entry->d_name);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[12/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_lit.c.obj
[13/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_int.c.obj
[14/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_rem.c.obj
[15/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_str.c.obj
[16/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_utils.c.obj
[17/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/linenoise/linenoise.c.obj
[18/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_rex.c.obj
[19/206] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/argtable3.c.obj
[20/206] Building C object esp-idf/esp_eth/CMakeFiles/__idf_esp_eth.dir/src/esp_eth.c.obj
ninja: build stopped: subcommand failed.
